Rates web client fetch implementation